--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/hyungkip/hunkybot#readme",
   "dependencies": {
     "discord.js": "^11.0.0",
-    "request": "^2.81.0"
+    "howler": "^2.0.3",
+    "opusscript": "0.0.3",
+    "redis": "^2.7.1",
+    "request": "^2.81.0",
+    "youtube-audio-stream": "0.0.48"
   }
 }
